kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: house-price
# Managed by Argo CD
