kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: house-price

spec:
  selector:
    app: flask-app

  ports:
    - port: 5000
      targetPort: 5000
